Removed Double constructor use as it is inefficient.